# c---learning

./: .gitignore  LICENSE  README.md  REPO_METADATA.md
01_Variablen_und_Datentypen/: DOKUMENTATION.md  variablen_und_datentypen.cpp
02_Operatoren_und_Ausdruecke/: DOKUMENTATION.md  operatoren_und_ausdruecke.cpp
03_Kontrollstrukturen/: DOKUMENTATION.md  kontrollstrukturen.cpp
04_Funktionen/: DOKUMENTATION.md  funktionen.cpp
05_Referenzen/: DOKUMENTATION.md  referenzen.cpp
06_Arrays_und_Vector/: DOKUMENTATION.md  arrays_und_vector.cpp
06_Pointers/: DOKUMENTATION.md  POINTERS_DOKUMENTATION.md
07_Strings/: DOKUMENTATION.md  strings.cpp
08_Strings/: DOKUMENTATION.md  strings.cpp
09_Const/: DOKUMENTATION.md  const.cpp
09_Klassen_und_Objekte/: DOKUMENTATION.md  klassen_und_objekte.cpp
10_Const/: DOKUMENTATION.md  const.cpp
10_Speicher_und_Lebensdauer/: DOKUMENTATION.md  speicher_und_lebensdauer.cpp
11_Header_und_Quelldateien/: header_und_quelldateien.cpp
12_Header_und_Quelldateien/: DOKUMENTATION.md  header_und_quelldateien.cpp
13_Schleifen_ueber_Container/: schleifen_ueber_container.cpp
25_Unit_Tests_mit_GoogleTest/: CMakeLists.txt  CMakePresets.json  DOKUMENTATION.md  unit_tests_mit_googletest.cpp
25_Unit_Tests_mit_GoogleTest/include/: calculator.h
25_Unit_Tests_mit_GoogleTest/src/: calculator.cpp
25_Unit_Tests_mit_GoogleTest/tests/: calculator_test.cpp
25_Unit_Tests_mit_GoogleTest/uebungen/: AUFGABEN.md  LOESUNGEN.cpp
35_CMake_tiefer/: CMakeLists.txt  DOKUMENTATION.md  cmake_tiefer.cpp
35_CMake_tiefer/include/: message.h
35_CMake_tiefer/src/: message.cpp
35_CMake_tiefer/uebungen/: AUFGABEN.md  LOESUNGEN.cpp
(+117 files in other folders)
